<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">情境感知</string>
	<string name="service_name">Service</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="act_battery">battery</string>
    <string name="act_sleeplayer">sleep</string>
    <string name="act_worklayer">work</string>
    <string name="act_meetlayer">meet</string>
    <string name="act_classlayer">class</string>
    <string name="act_on">on</string>
    <string name="act_off">off</string>
    <string name="act_start">start</string>
    <string name="act_end">end</string>
   
    <string name="app_name2">模式内调节</string>
    <string name="app_name3">模式内调节</string>
    <string name="monkey_light">灯光调节</string>
    <string name="monkey_back">保存并返回</string>
    <string name="monkey_voice">声音调节</string>
    <string name="monkey_ring">响铃模式</string>
    <string name="monkey_bluetooth">蓝牙开关</string>
    <string name="monkey_wifi">wifi开关</string>
    <string name="monkey_sync">sync开关</string>
    <string name="monkey_battery">电量低于多少时开始调节</string>
    <string name="monkey_on">开启</string>
    <string name="monkey_off">关闭</string>
    <string name="monkey_set">设置</string>
    <string name="monkey_normal">铃声</string>
    <string name="monkey_vibrate">震动</string>
    <string name="monkey_silent">静音</string>
    <string name="app_battery">电量情境</string>
    <string name="app_work">工作情境</string>
    <string name="app_sleep">睡眠情境</string>
    <string name="monkey_start">开始</string>
    <string name="monkey_end">结束</string>
    <string name="app_out">户外情境</string>
</resources>
